[metadata]
name = black-cat-photo-enhancer
version = 1.0.0
description = image enhancement methods specifically designed for black cat photos
long_description = file: README.md
long_description_content_type = markdown
url = https://github.com/cass1618/black-cat-photo-enhancer
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = src
install_requires =
    ultralytics
    numpy
    scikit-image
    matplotlib
    opencv-python

[options.packages.find]
where = src

[options.package_data]
blackCat = images/*.jpg